--- a/main.css
+++ b/main.css
@@ -1,49 +1,47 @@
 body {
-    height: 100vh;
-    border-width: 10px;
-    border-style: solid;
-    border-color: red;
+  height: 100vh;
+  border-width: 10px;
+  border-style: solid;
+  border-color: red;
+  color: rgb(100, 100, 100);
 }
 
 main {
-    margin: 15px;
-    font-family: sans-serif;
-    font-size: 20px;
+  margin: 15px;
+  font-family: sans-serif;
+  font-size: 20px;
 }
 
 li {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 /* responsive */
 
 /* phone */
 
-@media (min-width: 376px) { 
-    body {
-        border-color: blue;
-    }
+@media (min-width: 376px) {
+  body {
+    border-color: blue;
+  }
 }
 
-@media (min-width: 426px) { 
-body {
-        border-color: green;
-    }
+@media (min-width: 426px) {
+  body {
+    border-color: green;
+  }
 }
 
 /* tablets */
 @media (min-width: 769px) {
-body {
-        border-color: yellow;
-    }
+  body {
+    border-color: yellow;
+  }
 }
 
 /* desktops */
 @media (min-width: 1025px) {
-body {
-        border-color: hotpink;
-    }
+  body {
+    border-color: hotpink;
+  }
 }
-
-
-
