Add nice comment

--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body {
   color: rgb(100, 100, 100);
   background-color: white;
 }
-
+/* HELLOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO */
 main {
   margin: 15px;
   font-family: sans-serif;
