change bg color

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body {
   border-style: solid;
   border-color: red;
   color: rgb(100, 100, 100);
-  background-color: white;
+  background-color: yellow;
 }
 /* HELLOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO */
 main {
